@@ -1,5 +1,13 @@
 2016-02-07  Werner Lemberg  <wl@gnu.org>
 
+	Fix runtime errors found by clang's sanitizer (#47082).
+
+	* src/base/ftobjs.c (FT_Render_Glyph_Internal), src/base/ftoutln.c
+	(FT_Outline_Copy), src/cache/ftcsbits.c (ftc_sbit_copy_bitmap):
+	Properly handle empty input buffer.
+
+2016-02-07  Werner Lemberg  <wl@gnu.org>
+
 	[cff] Minor.
 
 	* src/cff/cffgload.c (cff_decoder_parse_charstrings) <cff_op_sqrt>:
@@ -76,7 +84,7 @@
 	(FT_Face_CheckTrueTypePatents, FT_Face_SetUnpatentedHinting):
 	Replace code with dummies.
 
-	* src/truetype/ttobjs.c (tt_face_init): Remove now defunct code. 
+	* src/truetype/ttobjs.c (tt_face_init): Remove now defunct code.
 	* src/truetype/ttobjs.h (TT_GraphicsState): Remove `both_x_axis'
 	field.
 
